# mnemo

./: .gitignore  LICENSE  README.md  dev.sh  pyproject.toml
docs/: 01-overview.md  02-requirements.md  03-architecture.md  04-data-model.md  05-mcp-api.md  06-models.md  07-lifecycle-and-ram.md  08-consolidation.md  09-tech-stack.md  10-roadmap.md  11-alternatives-research.md  12-testing.md  13-usage.md
docs/adr/: 0001-storage-engine.md
docs/research/: embedder-benchmark.md  generator-benchmark.md
docs/roadmap/: phase-0-skeleton.md  phase-1-memory-layer.md  phase-2-lifecycle.md  phase-3-consolidation.md  phase-4-polish.md  post-mvp.md  sqlite-migration.md
src/llmkit/: build.py  config.py  types.py
src/llmkit/capabilities/: llama_cpp_generator.py  llama_cpp_reranker.py  onnx_embedder.py  onnx_reranker.py
src/llmkit/lifecycle/: loadable.py  manager.py  residency.py
src/llmkit/ports/: embedder.py  generator.py  nli.py  reranker.py  tokenizer.py
src/llmkit/runtime/: _stats.py  hf_cache.py  hf_tokenizer.py  llama_cpp.py  llama_cpp_rank.py  onnx_encoder.py
src/mnemo/: __init__.py
src/mnemo/adapters/: runtime_stats.py
src/mnemo/adapters/cli/: app.py  confirmation.py  output.py
src/mnemo/adapters/embedding/: fastembed.py  (+6 more)
src/mnemo/application/: near_match.py  ports.py  project_description.py  project_gate.py  retrieval.py  scope_contract.py  scoping.py  scored_memory.py  search_criteria.py  token_budget.py  types.py  use_cases.py
src/mnemo/domain/: constants.py  generators.py  hashing.py  link.py  link_type.py  memory.py  memory_type.py  project.py  scope.py
src/mnemo/infrastructure/: composition.py  config.py  container.py  dimension_guard.py  logging_config.py  migrations.py
tests/: conftest.py
tests/fakes/: in_memory_project_repository.py  in_memory_repository.py
tests/integration/: conftest.py  test_async_embedding_scheduler.py  test_cli.py  test_client_installers.py  test_composition.py  test_container.py  test_dimension_guard_store.py  test_domain_eval.py  test_fastembed.py  test_get_memory.py  test_idle_exit.py  test_in_memory_repository.py  test_launcher.py  test_links_contract.py  test_llmkit_embedder_real.py  test_llmkit_generator_real.py  test_llmkit_llama_reranker_real.py  test_llmkit_reranker_real.py  test_mcp_server.py  test_migration.py  test_migrations.py  test_package_metadata.py  test_pplx_embedder.py  test_pplx_embedder_pool.py  test_project_repository_contract.py  test_proxy.py  test_reindex.py  test_search_rerank.py  test_service.py  test_service_control.py  test_setup_command.py  test_sql_executor_db.py  test_sqlite_connections.py  test_store_concurrency.py  test_store_contract.py  test_supersede_chain_deletion.py
tests/support/: sqlite_store.py
tests/unit/: test_cli_confirmation.py  test_cli_output.py  test_config.py  test_connector_command.py  test_connector_liveness.py  test_dimension_guard.py  test_domain.py  test_domain_fixture.py  test_fuser.py  test_idle_monitor.py  test_llmkit_boundary.py  test_llmkit_build.py  test_llmkit_embedder.py  test_llmkit_generator.py  test_llmkit_hf_cache.py  test_llmkit_llama_reranker.py  test_llmkit_llama_runtime.py  test_llmkit_onnx_reranker.py  test_llmkit_onnx_runtime.py  test_llmkit_residency.py  test_llmkit_stats.py  test_logging_config.py  test_mcp_contract.py  test_memory_type.py  test_near_match.py  test_pipeline.py  test_pipeline_context.py  test_pipeline_plan.py  test_project.py  test_project_description.py  test_rank_fusion.py  test_recall_pipeline.py  test_recall_rerank.py  test_recall_synthesize.py  test_rerank_policy.py  test_retrieval.py  test_search_criteria.py  test_search_pipeline.py  test_search_pool.py  test_selection.py  (+5 more)
tools/: README.md  locomo_bench.py
tools/eval/: core.py  domain.py  domain_fixture.py  dump_candidates.py  fusion_probe.py  gate_calibrate.py  locomo.py  longmemeval.py  metrics.py  mmr_probe.py  models.py  prod_snapshot.py  rerank_ab.py  rerank_calibrate.py  rerankers.py
tools/eval/fixtures/: domain_v1.json
tools/eval/scorers/: jina_v3_mlx.py  qwen3.py
tools/eval/tests/: test_domain_eval.py  test_domain_fixture.py  test_domain_reranker.py  test_fusion_probe.py  test_gate_calibrate.py  test_longmemeval.py  test_mmr_probe.py  test_prod_snapshot.py
(+102 files in other folders)
