[project]
name = "mnemo"
version = "0.2.3"
description = "Local, on-demand memory for AI coding agents (MCP)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "typer>=0.12.0",
    "sqlite-vec>=0.1.6",       # default store: vector search inside SQLite (FTS5 is built in)
]

[project.optional-dependencies]
# Default embedder: pplx-embed-v1-0.6b int8 ONNX on CPU, via raw onnxruntime (heavy).
pplx = ["onnxruntime>=1.16", "tokenizers>=0.15", "huggingface-hub>=0.20", "numpy>=1.24"]
embed = ["fastembed>=0.4.0"]   # alternative embedder (bge-small / fastembed models)
dev = ["pytest>=8.0"]

[project.scripts]
mnemo = "mnemo.adapters.cli.app:main"
mnemo-mcp = "mnemo.adapters.mcp.proxy:main"
mnemo-service = "mnemo.adapters.mcp.service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemo"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-m 'not heavy'"
markers = [
    "heavy: requires the heavy/networked fastembed backend (downloads a model)",
]
