[project]
name = "mnemo"
version = "0.3.13"
description = "Local, on-demand memory for AI coding agents (MCP)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "typer>=0.12.0",
    "sqlite-vec>=0.1.6",       # the store: vector search inside SQLite (FTS5 is built in)
    "onnxruntime>=1.16",        # default pplx embedder runtime (CPU)
    "tokenizers>=0.15",         # default pplx tokenizer
    "numpy>=1.24",              # embedding pooling / model output handling
    "huggingface-hub>=0.20",    # cache-first model resolution and first-run download
    "llama-cpp-python>=0.3.0",  # recall generator runtime — recall is always on the MCP surface
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mnemo = "mnemo.adapters.cli.app:main"
mnemo-mcp = "mnemo.adapters.mcp.proxy:main"
mnemo-service = "mnemo.adapters.mcp.service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemo", "src/llmkit"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]  # "." so tests can import shared doubles from tests/fakes
testpaths = ["tests"]
addopts = "-m 'not heavy'"
markers = [
    "heavy: requires a networked model backend (downloads weights)",
]
